# SynaptaNode-V0

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README_V1.md  keywords.txt  library.json  library.properties
examples/01_BasicDigital/: 01_BasicDigital.ino  platformio.ini  sdkconfig.defaults
examples/01_BasicDigital/src/: main.cpp
examples/02_MultiDevice/: 02_MultiDevice.ino
examples/02_MultiDevice/src/: main.cpp
examples/03_Sensor/: 03_Sensor.ino  platformio.ini
examples/03_Sensor/src/: main.cpp
examples/04_PhysicalButton/: 04_PhysicalButton.ino
examples/04_PhysicalButton/src/: main.cpp
examples/05_PwmDimmer/: platformio.ini
examples/05_PwmDimmer/src/: main.cpp
examples/06_Automation/: 06_Automation.ino  platformio.ini
examples/06_Automation/src/: main.cpp
examples/07_NvsCredentials/: 07_NvsCredentials.ino  platformio.ini
examples/07_NvsCredentials/src/: main.cpp
examples/08_MqttAuth/: 08_MqttAuth.ino  platformio.ini
examples/08_MqttAuth/src/: main.cpp
examples/09_LocalBroker/: 09_LocalBroker.ino
examples/09_LocalBroker/src/: main.cpp
src/: NodeConfig.cpp  NodeConfig.h  Synapta.h  SynaptaDevice.cpp  SynaptaDevice.h  SynaptaDevices.h  SynaptaNode.cpp  SynaptaNode.h
